--- a/extension/_locales/en/messages.json
+++ b/extension/_locales/en/messages.json
@@ -15,7 +15,7 @@
     "message": "Keyboard Shortcuts"
   },
   "popupWarning": {
-    "message": "Current shortcuts are non-changeable to avoid conflicts with essential browser functions or default shortcuts."
+    "message": "How to change the shortcuts"
   },
   "popup-apply-all-message": {
     "message": "Apply to all future tabs with video and audio"
