--- a/extension/_locales/ar/messages.json
+++ b/extension/_locales/ar/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "اختصارات لوحة المفاتيح"
   },
-  "popupWarning": {
-    "message": "لا يمكن تغيير الاختصارات الحالية لتجنب التعارض مع وظائف المتصفح الأساسية أو الاختصارات الافتراضية."
+  "popupInfo": {
+    "message": "كيفية تغيير الاختصارات"
   },
   "popup-apply-all-message": {
     "message": "تطبيق على جميع علامات التبويب المستقبلية التي تحتوي على فيديو وصوت"
