--- a/extension/_locales/bg/messages.json
+++ b/extension/_locales/bg/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "Клавишни комбинации"
   },
-  "popupWarning": {
-    "message": "Текущите клавишни комбинации не могат да бъдат променяни, за да се избегнат конфликти с основни функции на браузъра или стандартни комбинации."
+  "popupInfo": {
+    "message": "Как да промените преките пътища"
   },
   "popup-apply-all-message": {
     "message": "Прилагане на всички бъдещи раздели с видео и аудио"
