--- a/extension/_locales/bn/messages.json
+++ b/extension/_locales/bn/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "কীবোর্ড শর্টকাট"
   },
-  "popupWarning": {
-    "message": "প্রধান ব্রাউজার কার্যাবলি বা ডিফল্ট শর্টকাট সঙ্গে সংঘর্ষ সাধারণ করতে বরণ করে বর্তমান শর্টকাটগুলি পরিবর্তনযোগ্য নয়।"
+  "popupInfo": {
+    "message": "কিভাবে শর্টকাট পরিবর্তন করতে হয়"
   },
   "popup-apply-all-message": {
     "message": "ভবিষ্যতে সমস্ত ট্যাবে প্রযোগ করুন যেখানে ভিডিও এবং অডিও আছে"
