--- a/extension/_locales/el/messages.json
+++ b/extension/_locales/el/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "Συντομεύσεις Πληκτρολογίου"
   },
-  "popupWarning": {
-    "message": "Οι τρέχουσες συντομεύσεις πληκτρολογίου δεν είναι αλλάξιμες για να αποφευχθούν συγκρούσεις με ουσιώδεις λειτουργίες του προγράμματος περιήγησης ή προκαθορισμένες συντομεύσεις."
+  "popupInfo": {
+    "message": "Πώς να αλλάξετε τις συντομεύσεις"
   },
   "popup-apply-all-message": {
     "message": "Εφαρμογή σε όλες τις μελλοντικές καρτέλες με βίντεο και ήχο"
