--- a/extension/_locales/en/messages.json
+++ b/extension/_locales/en/messages.json
@@ -14,7 +14,7 @@
   "popupTitle": {
     "message": "Keyboard Shortcuts"
   },
-  "popupWarning": {
+  "popupInfo": {
     "message": "How to change the shortcuts"
   },
   "popup-apply-all-message": {
