--- a/extension/_locales/fa/messages.json
+++ b/extension/_locales/fa/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "میان‌برهای صفحه کلید"
   },
-  "popupWarning": {
-    "message": "میان‌برهای فعلی قابل تغییر نیستند تا از بروز تداخل با عملکردهای اصلی مرورگر یا میان‌برهای پیش‌فرض جلوگیری شود."
+  "popupInfo": {
+    "message": "نحوه تغییر میانبرها"
   },
   "popup-apply-all-message": {
     "message": "به تمام تب‌های آینده با ویدیو و صدا اعمال شود"
