--- a/extension/_locales/gu/messages.json
+++ b/extension/_locales/gu/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "કીબોર્ડ શોર્ટકટ્સ"
   },
-  "popupWarning": {
-    "message": "હાલના શોર્ટકટ્સ ફૂટકરો કારણે બદલીશ કરવામાં નથી આપેલી, જેની મુકાબલે બ્રાઉઝરની મહત્વપૂર્ણ કાર્યક્રમો અથવા મૂળભૂત શોર્ટકટ્સથી સંઘટિતા ન થવાનો."
+  "popupInfo": {
+    "message": "શોર્ટકટ કેવી રીતે બદલવું"
   },
   "popup-apply-all-message": {
     "message": "ભવિષ્યના ટેબ પર ઓડિયો અને વિડિયોમાં લાગુ કરો"
