--- a/extension/_locales/he/messages.json
+++ b/extension/_locales/he/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "קיצורי מקלדת"
   },
-  "popupWarning": {
-    "message": "קיצורי המקלדת הנוכחיים אינם ניתנים לשינוי כדי למנוע התנגשויות עם פונקציות חיוניות של הדפדפן או קיצורי מקלדת ברירת המחדל."
+  "popupInfo": {
+    "message": "כיצד לשנות את קיצורי הדרך"
   },
   "popup-apply-all-message": {
     "message": "החל על כל כרטיסיות עתידיות עם סרטוני ושמע"
