--- a/extension/_locales/hi/messages.json
+++ b/extension/_locales/hi/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "कीबोर्ड शॉर्टकट्स"
   },
-  "popupWarning": {
-    "message": "आवश्यक ब्राउज़र कार्यों या डिफ़ॉल्ट शॉर्टकट्स के साथ संघर्षों से बचने के लिए वर्तमान शॉर्टकट्स परिवर्तन योग्य नहीं हैं।"
+  "popupInfo": {
+    "message": "शॉर्टकट कैसे बदलें"
   },
   "popup-apply-all-message": {
     "message": "आगामी सभी टैब्स पर वीडियो और ऑडियो में लागू करें"
