--- a/extension/_locales/mr/messages.json
+++ b/extension/_locales/mr/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "कीबोर्ड शॉर्टकट"
   },
-  "popupWarning": {
-    "message": "आवश्यक ब्राउझर फंक्शन्स किंवा डीफॉल्ट शॉर्टकटसह संघर्ष टाळण्यासाठी वर्तमान शॉर्टकट बदलण्यायोग्य नाहीत."
+  "popupInfo": {
+    "message": "शॉर्टकट कसे बदलावे"
   },
   "popup-apply-all-message": {
     "message": "व्हिडिओ आणि ऑडिओसह भविष्यातील सर्व टॅबवर लागू करा"
