--- a/extension/_locales/ru/messages.json
+++ b/extension/_locales/ru/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "Горячие клавиши"
   },
-  "popupWarning": {
-    "message": "Текущие горячие клавиши нельзя изменить, чтобы избежать конфликтов с важными функциями браузера или стандартными горячими клавишами."
+  "popupInfo": {
+    "message": "Как изменить ярлыки"
   },
   "popup-apply-all-message": {
     "message": "Применить ко всем будущим вкладкам с видео и аудио"
