--- a/extension/_locales/ta/messages.json
+++ b/extension/_locales/ta/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "விருப்பப் பட்டியல் குறியீடுகள்"
   },
-  "popupWarning": {
-    "message": "முக்கிய உலாவி செயல்திறன் அல்லது இயல்பு குறியீடுகளுடன் போராட்டத்தை தவிர்க்க தற்போது மாற்ற முடியாது."
+  "popupInfo": {
+    "message": "குறுக்குவழிகளை எவ்வாறு மாற்றுவது"
   },
   "popup-apply-all-message": {
     "message": "எல்லா எதிர்கால டேப்களுக்கும் வீடியோ மற்றும் ஒலி படிகளுக்கு பொருந்துமானதாக பயன்படுத்து"
