--- a/extension/_locales/te/messages.json
+++ b/extension/_locales/te/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "కీబోర్డ్ షార్ట్ కట్టెలు"
   },
-  "popupWarning": {
-    "message": "ముప్పుడు కన్ఫ్లిక్ట్లను తట్టుకుని పేర్కొనివ్వడానికి ప్రధాన బ్రౌజర్ కార్యాచరణలు లేదా డిఫాల్ట్ షార్ట్ కట్టెలతో సంఘటించలేదు."
+  "popupInfo": {
+    "message": "సత్వరమార్గాలను ఎలా మార్చాలి"
   },
   "popup-apply-all-message": {
     "message": "భవిష్యత్తులో ఉన్న అన్ని ట్యాబ్లలో వీడియో మరియు ఆడియోకి ప్రయోగించు"
