--- a/extension/_locales/th/messages.json
+++ b/extension/_locales/th/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "แป้นพิมพ์ลัด"
   },
-  "popupWarning": {
-    "message": "แป้นพิมพ์ลัดปัจจุบันไม่สามารถเปลี่ยนแปลงได้ เพื่อป้องกันการขัดแย้งกับฟังก์ชันหลักของเบราว์เซอร์หรือแป้นพิมพ์ลัดเริ่มต้น"
+  "popupInfo": {
+    "message": "วิธีเปลี่ยนทางลัด"
   },
   "popup-apply-all-message": {
     "message": "ใช้กับแท็บทั้งหมดในอนาคตที่มีวิดีโอและเสียง"
