--- a/extension/_locales/uk/messages.json
+++ b/extension/_locales/uk/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "Гарячі клавіші"
   },
-  "popupWarning": {
-    "message": "Поточні гарячі клавіші не можна змінювати, щоб уникнути конфліктів з основними функціями браузера або типовими гарячими клавішами."
+  "popupInfo": {
+    "message": "Як змінити ярлики"
   },
   "popup-apply-all-message": {
     "message": "Застосувати до всіх майбутніх вкладок з відео та аудіо"
