--- a/extension/_locales/ml/messages.json
+++ b/extension/_locales/ml/messages.json
@@ -14,8 +14,8 @@
   "popupTitle": {
     "message": "കീബോർഡ് കുറുക്കുവഴികൾ"
   },
-  "popupWarning": {
-    "message": "അത്യാവശ്യ ബ്രൗസർ ഫംഗ്‌ഷനുകളുമായോ സ്ഥിരസ്ഥിതി കുറുക്കുവഴികളുമായോ വൈരുദ്ധ്യങ്ങൾ ഒഴിവാക്കാൻ നിലവിലെ കുറുക്കുവഴികൾ മാറ്റാനാകില്ല."
+  "popupInfo": {
+    "message": "കുറുക്കുവഴികൾ എങ്ങനെ മാറ്റാം"
   },
   "popup-apply-all-message": {
     "message": "വീഡിയോയും ഓഡിയോയും ഉള്ള എല്ലാ ഭാവി ടാബുകളിലും പ്രയോഗിക്കുക"
